# CGX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  app_gradio_llm.py  index.html  pyproject.toml  requirements-ml.txt  requirements.txt  test_package.ipynb
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
cgx_index/: chunks.jsonl  graph.json  records.jsonl
cgx_index/indices/: impl.index  impl.rows.jsonl  intent.index  intent.rows.jsonl  meta.json
docs/: Agent.md  architecture.md  book.md  flowcharts.md  hardware_matrix.json  hardware_matrix.md  usage.md
extension/: .vscodeignore  README.md  package.json  tsconfig.json
extension/src/: extension.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/.tsbuild/: tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx  Card.tsx  CodeBlock.tsx  ConnectionBanner.test.tsx  ConnectionBanner.tsx  DiffView.test.tsx  DiffView.tsx  EmptyState.tsx  Input.tsx  Markdown.tsx  Pill.tsx
frontend/src/layout/: AppShell.tsx  Header.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  connections.ts  embedPullManager.ts  pullManager.ts  sse.test.ts  sse.ts  utils.ts
frontend/src/pages/: AgentPage.tsx  AskPage.tsx  HardwarePage.tsx  IndexPage.tsx  PlanPage.tsx  SettingsPage.tsx
frontend/src/store/: connection.test.ts  connection.ts  tasks.ts  workspace.test.ts  workspace.ts
frontend/src/test/: setup.ts
notebooks/: Temp.ipynb  try1.ipynb
scripts/: _add_spdx_headers.py
skills/: __init__.py  base.py
skills/django/: __init__.py
skills/express/: __init__.py
skills/fastapi/: __init__.py
skills/flask/: __init__.py
skills/nextjs/: __init__.py
skills/python_cli/: __init__.py
skills/react/: __init__.py
skills/sqlite/: __init__.py
skills/tailwind/: __init__.py
skills/vue/: __init__.py
src/: st_embedder.py
src/cgx/: __init__.py  api.py  config.py  logging_setup.py  sessions.py  telemetry.py
src/cgx/agents/: __init__.py  judge.py  loop.py  planner.py  tracker.py  types.py  viz.py
src/cgx/answer/: context_map.py  engine.py  hardware_matrix.py  intent.py  model_caps.py  ollama_discovery.py  profiles.py  providers.py  ratelimit.py
src/cgx/cli/: main.py
src/cgx/codegen/: __init__.py  ast_insert.py  diff_apply.py  disk_apply.py  env_manager.py  pipeline.py  symbol_map.py  test_runner.py  validate.py
src/cgx/embeddings/: build.py  cache.py  catalog.py  helpers.py  index.py  loader.py  records.py  search.py  views.py
src/cgx/graph/: aggregation.py  backend.py  build_graph.py  projectors.py
src/cgx/io/: persist.py
src/cgx/parser/: __init__.py  base.py  module_path.py  parse_codebase.py  python_parser.py  schema.py
src/cgx/pipeline/: auto.py  run.py
src/cgx/retrieval/: ann_numpy.py  cli_adapter.py  hybrid.py  index.py  lexical.py  orchestrator.py  reranker.py  rrf.py  tokenize.py
src/cgx/viz/: visualize.py
src/cgx/webui/: __init__.py  handlers.py  helpers.py  launch.py  models.py  server.py  sse.py  task_store.py
src/cgx/webui/routes/: __init__.py  agent.py  ask.py  embed.py  hardware.py  index.py  plan.py  profiles.py  rollback.py  sessions.py  setup.py  status.py  tasks.py
src/cgx/webui/static/: index.html
src/cgx/webui/static/assets/: AgentPage-BGsg5hkK.js  AgentPage-BUDwnOyj.js  AgentPage-C2ykG6rF.js  AgentPage-CDmQneo1.js  AgentPage-CMAxsVCp.js  AgentPage-CujD2Zi4.js  AgentPage-D0_W14ol.js  AgentPage-DVkflbpS.js  AgentPage-DVrCFn5l.js  AskPage-BrxgRKFz.js  AskPage-CFaepfq1.js  AskPage-D0MffPAN.js  AskPage-DDOQDN6o.js  AskPage-DSfxWwrR.js  AskPage-DlLbPtFW.js  AskPage-DrUKXcZG.js  AskPage-oyEukukq.js  AskPage-sq2OAzky.js  Card--zR4oOZc.js  Card-4A1lOUsq.js  Card-7VvjYiKq.js  Card-CFbDGe70.js  Card-CgCkmbTa.js  Card-DBv3Eu59.js  Card-SQhU1HRz.js  Card-SszJS4VQ.js  DiffView-B9Wle7wg.js  DiffView-BJQA_VRf.js  DiffView-DryXH0Cx.js  HardwarePage-4pIjsmYa.js  HardwarePage-AUO-oBRt.js  HardwarePage-B7gfbO_V.js  HardwarePage-BiZqCi5S.js  HardwarePage-CUEG-4G5.js  HardwarePage-D3puYcKF.js  HardwarePage-DzuTP4hK.js  HardwarePage-O5k6KaEG.js  HardwarePage-mJCVMJ6n.js  IndexPage-BKvHC95j.js  IndexPage-BUah57lQ.js  (+65 more)
tests/: conftest.py  test_agents.py  test_agents_viz.py  test_ast_insert.py  test_codegen_pipeline.py  test_config.py  test_context_map.py  test_e2e_smoke.py  test_embed_catalog.py  test_embeddings_cache.py  test_engine_helpers.py  test_engine_stubs.py  test_graph_backend.py  test_graph_load_compat.py  test_hardware_matrix.py  test_incremental_index.py  test_insertion_cache.py  test_integration_index_query.py  test_intent.py  test_io_persist.py  test_logging_setup.py  test_model_caps.py  test_ollama_discovery.py  test_parser_helpers.py  test_parser_seam.py  test_profiles.py  test_ratelimit.py  test_rerank.py  test_reranker_profile.py  test_schema_snapshots.py  test_sessions.py  test_skills.py  test_telemetry.py  test_tokenize.py  test_webui_embed_routes.py  test_webui_helpers.py  test_webui_setup_cloud_models.py  test_webui_sse.py  test_webui_task_store.py
tests/snapshots/: hybrid_top3_ids.json  record_keys.json  suggest_insertion_points_shape.json
