[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "averix"
version = "0.2.0"
description = "Averix — local-first codebase RAG with hybrid retrieval and self-testing code generation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Ramin Mohammadi"}]
keywords = ["rag", "codebase", "retrieval", "llm", "ollama", "code-generation", "averix"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "networkx>=3.0",
  "numpy>=1.24",
  "requests>=2.31",
  "pathspec>=0.11",
]

[project.optional-dependencies]
embeddings = [
  "sentence-transformers>=2.7",
  "transformers>=4.40,<5",
  "torch>=2.1",
]
faiss = ["faiss-cpu>=1.7"]
ui = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
]
codegen = ["unidiff>=0.7"]
keyring = ["keyring>=24"]
viz = ["matplotlib>=3.7"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-requests",
]
all = [
  "sentence-transformers>=2.7",
  "transformers>=4.40,<5",
  "torch>=2.1",
  "faiss-cpu>=1.7",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "python-multipart>=0.0.9",
  "unidiff>=0.7",
  "keyring>=24",
  "matplotlib>=3.7",
]

[project.urls]
Repository = "https://github.com/Averix/averix"

[project.scripts]
averix = "cgx.cli.main:main"
cgx = "cgx.cli.main:main"
averix-ui = "cgx.webui.launch:launch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cgx" = ["py.typed"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["build", "dist", ".venv", ".mypy_cache", ".ruff_cache", "cgx_index"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
